Fully added sculk jaw! (thx chatgpt for making modding more bearable)

--- a/src/main/resources/assets/eschaton/lang/en_us.json
+++ b/src/main/resources/assets/eschaton/lang/en_us.json
@@ -12,8 +12,7 @@
   "block.eschaton.fallium_ore_block": "Fallium Ore",
   "block.eschaton.sculk_jaw": "Sculk Jaw",
 
-  "death.attack.sculk_bite": "%1$s was consumed by the Sculk.",
-  "death.attack.sculk_bite.player": "%1$s was consumed by the Sculk while fighting %2$s.",
+  "death.attack.sculk_bite": "%1$s was devoured by sculk",
 
   "itemgroups.eschaton.eschaton_additions": "Eschaton Additions"
 }
