--- a/src/main/resources/assets/eschaton/lang/en_us.json
+++ b/src/main/resources/assets/eschaton/lang/en_us.json
@@ -11,8 +11,11 @@
   "block.eschaton.warped_shroom_lamp_block": "Warped Shroom Lamp",
   "block.eschaton.fallium_ore_block": "Fallium Ore",
   "block.eschaton.sculk_jaw": "Sculk Jaw",
+  "block.eschaton.mossy_deepslate_bricks": "Mossy Deepslate Bricks",
 
   "death.attack.sculk_bite": "%1$s was devoured by sculk",
+
+  "effect.eschaton.systolic_stillness": "Systolic Stillness",
 
   "itemgroups.eschaton.eschaton_additions": "Eschaton Additions"
 }
